fix the vertical scroll visibility when the adaptive menu doesn't fit in the window height

--- a/styles/widgets/common/menu.less
+++ b/styles/widgets/common/menu.less
@@ -15,7 +15,6 @@
     }
 }
 
-
 .dx-menu-vertical {
     .vertical-middle();
 
@@ -77,6 +76,21 @@
 
         &:last-child {
             border-bottom: none;
+        }
+    }
+}
+
+.dx-menu-adaptive-mode-overlay-wrapper {
+    .flex-container(row);
+
+    .dx-overlay-content {
+        display: flex;
+        position: relative;
+
+        .dx-treeview {
+            height: auto;
+
+            .flex-item();
         }
     }
 }
